--- a/.github/workflows/onchain-lob-sdk.yml
+++ b/.github/workflows/onchain-lob-sdk.yml
@@ -5,7 +5,7 @@ on:
       - main
       - dev
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   pull_request:
 env:
   node-version: 20
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.node-version }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Print environment info
         run: |
@@ -57,7 +57,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.node-version }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Print environment info
         run: |
@@ -66,7 +66,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Build for example
         run: npm run build
 
@@ -82,7 +82,7 @@ jobs:
   publish-npm:
     name: Publish to NPM
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build]
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     steps:
       - name: Download the build from the artifacts storage
@@ -93,7 +93,7 @@ jobs:
       - name: Set up Node.js ${{ env.node-version }}
         uses: actions/setup-node@v4
         with:
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
           node-version: ${{ env.node-version }}
 
       - name: Print environment info
@@ -105,7 +105,7 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      
+
   publish-github-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
