Edited github job

--- a/.github/workflows/onchain-lob-sdk.yml
+++ b/.github/workflows/onchain-lob-sdk.yml
@@ -49,6 +49,7 @@ jobs:
   test:
     name: Lint and test
     runs-on: ubuntu-latest
+    if: false
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
